feat: 프로젝트내에서 자바랑 코틀린 같이 사용할 수 있도록 설정

--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -4,7 +4,7 @@ ext {
 
 dependencies {
     implementation project(":dgdg-domain")
-    implementation project(":dgdg-domain")
+    implementation project(":dgdg-common")
 
     // spring web
     implementation 'org.springframework.boot:spring-boot-starter-web'
