--- a/dgdg-domain/build.gradle
+++ b/dgdg-domain/build.gradle
@@ -20,4 +20,8 @@ dependencies {
     // Database
     // h2
     implementation 'com.h2database:h2'
+
+    // querydsl
+    api("com.querydsl:querydsl-jpa")
+    kapt("com.querydsl:querydsl-apt::jpa")
 }
