feat : Swagger를 사용했습니다.

--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -8,5 +8,8 @@ dependencies {
 
     // spring web
     implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    //swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
