--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -29,7 +29,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: dgdg-backend-dev
+          ECR_REPOSITORY: dev-dgdg-backend
           IMAGE_TAG: latest
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
