--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -36,11 +36,16 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
+      - name: Download task definition
+        id: task-definition
+        run: |
+          aws ecs describe-task-definition --task-definition dgdg-backend-dev-task --query taskDefinition > task-definition.json
+
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: dgdg-backend-dev-task.json
+          task-definition: task-definition.json
           container-name: dgdg-backend-container
           image: ${{ steps.build-image.outputs.image }}
 
