ECS task-definition 다운로드 방식 변경
주석

주석

테스트

ECS task-definition Deregister 로직 추가

ECS task-definition Deregister 로직 추가

--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [develop, feature/cicd-setup]
 
-name: 개발 dgdg-backend 서버 배포
+name: 개발 서버 ECS 배포
 
 jobs:
   deploy:
@@ -37,9 +37,14 @@ jobs:
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Download task definition
-        id: task-definition
+        id: download-task
         run: |
           aws ecs describe-task-definition --task-definition dgdg-backend-dev-task --query taskDefinition > task-definition.json
+          echo "::set-output name=revision::$(cat task-definition.json | jq .revision)"
+
+      - name: De-register previous revision
+        run: |
+          aws ecs deregister-task-definition --task-definition dgdg-backend-dev-task:${{ steps.download-task.outputs.revision }}
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
