feat: Java/Kotlin 혼합 환경에서, Kotlin Lombok Plugin 적용

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ subprojects {
         plugin("org.jetbrains.kotlin.kapt")
     }
 
+    kapt {
+        keepJavacAnnotationProcessors = true
+    }
+
     sourceCompatibility = '11'
 
     compileKotlin {
