feat : lombok의존성 추가했습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ subprojects {
         implementation("org.jetbrains.kotlin:kotlin-stdlib")
         implementation("org.jetbrains.kotlin:kotlin-reflect")
         implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+
+        //lombok
+        compileOnly'org.projectlombok:lombok:1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
     }
 
     configurations {
