--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -48,9 +48,9 @@ jobs:
           aws ecs describe-task-definition --task-definition dgdg-backend-dev-task --query taskDefinition > task-definition.json
           echo "::set-output name=revision::$(cat task-definition.json | jq .revision)"
 
-      - name: De-register previous revision
-        run: |
-          aws ecs deregister-task-definition --task-definition dgdg-backend-dev-task:${{ steps.download-task.outputs.revision }}
+      #- name: De-register previous revision
+      #  run: |
+      #    aws ecs deregister-task-definition --task-definition dgdg-backend-dev-task:${{ steps.download-task.outputs.revision }}
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
