--- a/build.gradle
+++ b/build.gradle
@@ -72,11 +72,13 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        finalizedBy 'jacocoTestReport'
     }
 
     jacocoTestReport {
         reports {
             xml.enabled true
+            xml.destination file("${rootProject.projectDir}/build/reports/jacoco/report.xml")
             html.enabled true
         }
         finalizedBy 'jacocoTestCoverageVerification'
@@ -99,3 +101,4 @@ subprojects {
         }
     }
 }
+
