--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ subprojects {
 
     jacoco {
         toolVersion = "0.8.7"
+        reportsDir = file("${rootProject.projectDir}/build")
     }
 
     kapt {
@@ -72,33 +73,26 @@ subprojects {
 
     test {
         useJUnitPlatform()
-        finalizedBy 'jacocoTestReport'
     }
 
     jacocoTestReport {
         reports {
             xml.enabled true
-            xml.destination file("${rootProject.projectDir}/build/reports/jacoco/report.xml")
             html.enabled true
         }
-        finalizedBy 'jacocoTestCoverageVerification'
-    }
 
-    jacocoTestCoverageVerification {
-        violationRules {
-            rule {
-                enabled = true
-                element = 'CLASS'
-
-                limit {
-                    counter = 'LINE'
-                    value = 'COVEREDRATIO'
-                    minimum = 0.60
-                }
-                excludes = ["*.Q*"]
-            }
-
+        // QueryDSL codecov report 대상 제외
+        def Qdomains = []
+        for(qPattern in "**/QA" .. "**/QZ"){
+            Qdomains.add(qPattern+"*")
         }
+
+        afterEvaluate {
+            classDirectories.setFrom(files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: [] + Qdomains)
+            }))
+        }
+
     }
 }
 
