--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,4 +1,9 @@
 coverage:
-  precision: 2
-  round: down
-  range: "70...100"
+  status:
+    project:
+      default: false  # disable the default status that measures entire project
+      tests:  # declare a new status context "tests"
+        target: 100%  # we always want 100% coverage here
+        paths: "tests/"  # only include coverage in "tests/" folder
+      app:  # declare a new status context "app"
+        paths: "!tests/"  # remove all files in "tests/"
