--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,9 +1,26 @@
+codecov:
+  require_ci_to_pass: yes
+
 coverage:
-  status:
-    project:
-      default: false  # disable the default status that measures entire project
-      tests:  # declare a new status context "tests"
-        target: 100%  # we always want 100% coverage here
-        paths: "tests/"  # only include coverage in "tests/" folder
-      app:  # declare a new status context "app"
-        paths: "!tests/"  # remove all files in "tests/"
+  precision: 2
+  round: down
+  range: "60...100"
+
+parsers:
+  gcov:
+    branch_detection:
+      conditional: yes
+      loop: yes
+      method: no
+      macro: no
+
+comment:
+  layout: "reach,diff,flags,files,footer"
+  behavior: default
+  require_changes: false
+  branches:
+    - develop
+    - master
+
+github_checks:
+  annotations: true
