--- a/.github/workflows/common.yaml
+++ b/.github/workflows/common.yaml
@@ -2,7 +2,7 @@ on:
   pull_request:
     branches: [ master, develop ]
   push:
-    branches: [ master, develop, feature/testing-setup ] # 테스트 브랜치
+    branches: [ master, develop ] # 테스트 브랜치
 
 name: CI 테스팅 및 테스트 커버리지 측정
 
