gradle test 중복 명령어 제거

--- a/.github/workflows/common.yaml
+++ b/.github/workflows/common.yaml
@@ -22,7 +22,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Test with Gradle
-        run: ./gradlew clean build test
+        run: ./gradlew clean build
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
