feat: CI 테스팅 추가 및 codecov 테스트 커버리지 측정 추가 (#8)
* jacobo 설정 추가

* github actions ci testing 및 codecov 추가

* file path 변경

* codecov.yaml 추가

* report 파일 이름 수정

* codecov 설정 파일 변경

* gradle test 시에 jacoco report 하도록 설정

* codecov.yaml 에 코멘트 추가

* 테스트 브랜치 삭제 및 참조 링크 추가

* 주석 삭제

* gradle test 중복 명령어 제거

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
         plugin('kotlin-spring')
         plugin('kotlin-jpa')
         plugin('kotlin-kapt')
+        plugin('jacoco')
     }
 
     sourceCompatibility = '11'
@@ -43,6 +44,11 @@ subprojects {
 
     repositories {
         mavenCentral()
+    }
+
+    jacoco {
+        toolVersion = "0.8.7"
+        reportsDir = file("${rootProject.projectDir}/build")
     }
 
     kapt {
@@ -67,5 +73,27 @@ subprojects {
 
     test {
         useJUnitPlatform()
+        finalizedBy jacocoTestReport
+    }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+            html.enabled true
+        }
+
+        // QueryDSL codecov report 대상 제외
+        def Qdomains = []
+        for(qPattern in "**/QA" .. "**/QZ"){
+            Qdomains.add(qPattern+"*")
+        }
+
+        afterEvaluate {
+            classDirectories.setFrom(files(classDirectories.files.collect {
+                fileTree(dir: it, exclude: [] + Qdomains)
+            }))
+        }
+
     }
 }
+
