feat: 로컬용 인메모리 h2 설정

--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 7000
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+spring:
+  profiles:
+    active: local
+    include:
+      - db
