--- a/dgdg-domain/build.gradle
+++ b/dgdg-domain/build.gradle
@@ -10,6 +10,9 @@ dependencies {
     // h2
     implementation 'com.h2database:h2'
 
+    // postgresql
+    runtimeOnly 'org.postgresql:postgresql:42.2.24'
+
     // querydsl
     api("com.querydsl:querydsl-jpa")
     kapt("com.querydsl:querydsl-apt::jpa")
