--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -11,5 +11,8 @@ dependencies {
 
     //swagger
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    // jwt
+    implementation 'com.auth0:java-jwt:3.18.2'
 }
 
