--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,14 @@ subprojects {
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
-        //OAuth2.0
+        //security
         implementation ("org.springframework.boot:spring-boot-starter-security")
+
+        //oauth
+        implementation ('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+        implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+
     }
 
     configurations {
