fix: jwt yaml 파일 분리

--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -9,6 +9,4 @@ spring:
     active: local
     include:
       - db
-jwt:
-  issuer: dgdg
-  secret: local-test-gsfasfgdsdafasdfs-123123
+      - jwt
