--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -11,7 +11,7 @@ spring:
 spring:
   config:
     activate:
-      on-profile: local-h2
+      on-profile: local
   h2:
     console:
       enabled: true
