feat: JPA allopen 플러그인 적용해야 지연로딩 되서 설정

--- a/dgdg-domain/build.gradle
+++ b/dgdg-domain/build.gradle
@@ -1,6 +1,12 @@
 bootJar { enabled = false }
 jar { enabled = true }
 
+allOpen {
+    annotation("javax.persistence.Entity")
+    annotation("javax.persistence.MappedSuperclass")
+    annotation("javax.persistence.Embeddable")
+}
+
 dependencies {
     implementation project(":dgdg-common")
 
