--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-### client_id ###
-java/com/depromeet/dgdg/config/auth/OAuth2Kakao.java
+### ignore properties file application.yml ###
+application.yml
+
+
