feat : Kakao o auth2.0 연동 (#10)
* application-oauth 설정정보

* 의존성 수정 및 OAuthAttribute 클래스 생성

* kakao API로 구현

* AccessToken받을때 담을 객체

* RestTemplate 빈 등록

* 카카오 API 구현

* kakao OAuth2.0

* 카카오 로그인 구현하기

* gitignore

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,11 @@ subprojects {
         //lombok
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+
+        //JSONParser, JSONObject
+        implementation 'org.json:json:20190722'
+
+
     }
 
     configurations {
