--- a/dgdg-domain/build.gradle
+++ b/dgdg-domain/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     // Database
     // h2
     implementation 'com.h2database:h2'
+    // postgreSQL
+    implementation 'org.postgresql:postgresql'
 
     // querydsl
     api("com.querydsl:querydsl-jpa")
