리팩토링과 UserEntity

--- a/build.gradle
+++ b/build.gradle
@@ -69,9 +69,8 @@ subprojects {
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
-        //JSONParser, JSONObject
-        implementation 'org.json:json:20190722'
-
+        implementation 'org.springframework.boot:spring-boot-starter-webflux'
+        implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
     }
 
