feat : AWS secrets manager 및 PostgreSQL 셋팅 (#16)
* aws secrets manager auto configuration 설정

* Component 어노테이션 삭제

* kakao 앱키 AWS secrets manager 추가

* Delete application-oauth.yml

* 으아아악

* CI aws credential 추가

--- a/dgdg-api/src/test/resources/application.yml
+++ b/dgdg-api/src/test/resources/application.yml
@@ -2,6 +2,10 @@ jwt:
   issuer: issuer
   secret: secret
   expires_time: 86400
+aws:
+  encrypt:
+    region: ap-northeast-2
+    secret-name: dgdg/local/secrets
 spring:
   security:
     oauth2:
