refactor: AWS SecretManager를 자동으로 프로퍼티에 설정하도록 수정

--- a/dgdg-api/src/main/resources/application-jwt.yml
+++ b/dgdg-api/src/main/resources/application-jwt.yml
@@ -7,3 +7,11 @@ spring:
     activate:
       on-profile: local
 ---
+jwt:
+  issuer: ${jwt-issuer}
+  secret: ${jwt-secret}
+  expires_time: 86400 # 1일 (60 * 60 * 24)
+spring:
+  config:
+    activate:
+      on-profile: dev
