--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -34,9 +34,9 @@ spring:
   datasource:
     hikari:
       driver-class-name: org.postgresql.Driver
-      jdbc-url: ${aws.secret-manager.url}
-      username: ${aws.secret-manager.username}
-      password: ${aws.secret-manager.password}
+      jdbc-url: ${jdbc-url}
+      username: ${jdbc-username}
+      password: ${jdbc-password}
       maximum-pool-size: 10
       pool-name: local-pg-pool
   jpa:
@@ -50,12 +50,14 @@ spring:
   datasource:
     hikari:
       driver-class-name: org.postgresql.Driver
-      jdbc-url: ${aws.secret-manager.url}
-      username: ${aws.secret-manager.username}
-      password: ${aws.secret-manager.password}
+      jdbc-url: ${jdbc-url}
+      username: ${jdbc-username}
+      password: ${jdbc-password}
       maximum-pool-size: 30
       pool-name: dev-pg-pool
-
+  jpa:
+    hibernate:
+      ddl-auto: update
 ---
 spring:
   config:
