Mockito를 사용해서 KakaoLoginService 테스트

--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -3,6 +3,8 @@ ext {
 }
 
 dependencies {
+
+    implementation 'junit:junit:4.13.1'
     implementation project(":dgdg-domain")
     implementation project(":dgdg-common")
 
