fix: dev 환경 jwt 프로퍼티 에러 수정 및 Deprecated 수정

--- a/dgdg-api/src/main/resources/application-jwt.yml
+++ b/dgdg-api/src/main/resources/application-jwt.yml
@@ -11,7 +11,7 @@ spring:
 jwt:
   issuer: ${jwt-issuer}
   secret: ${jwt-secret}
-  expires_time: 86400 # 1일 (60 * 60 * 24)
+  access_token_expires_time: 86400 # 1일 (60 * 60 * 24)
   refresh_token_expires_time: 2592000 # 30일 (60 * 60 & 24 * 30)
 spring:
   config:
