feat: 스웨거 인증 기능 추가

--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     //swagger
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.11'
 
     // jwt
     implementation 'com.auth0:java-jwt:3.18.2'
