feignClient 연동 후 apple public key 가져오기

--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ buildscript {
         springBootVersion = '2.5.4'
         kotlinVersion = '1.5.31'
         kotestVersion = '4.4.3'
+        springCloudVersion = '2020.0.4'
     }
     repositories {
         mavenCentral()
+
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -35,13 +37,11 @@ subprojects {
     compileKotlin {
         kotlinOptions {
             jvmTarget = "11"
-            freeCompilerArgs = ["-Xjsr305=strict"]
         }
     }
     compileTestKotlin {
         kotlinOptions {
             jvmTarget = "11"
-            freeCompilerArgs = ["-Xjsr305=strict"]
         }
     }
 
@@ -75,10 +75,6 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
-        // kotest
-        testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
-        testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
-
     }
 
     configurations {
@@ -90,6 +86,13 @@ subprojects {
     test {
         useJUnitPlatform()
         finalizedBy jacocoTestReport
+    }
+
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
     }
 
     jacocoTestReport {
