애플 로그인 구현

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,14 @@ buildscript {
         kotlinVersion = '1.5.31'
         kotestVersion = '4.4.3'
         springCloudVersion = '2020.0.4'
+        kotlinLombokVersion = '1.6.0-RC'
+        lombokPluginVersion = '6.2.0'
     }
     repositories {
-        mavenCentral()
+//        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 
     }
     dependencies {
@@ -14,6 +19,8 @@ buildscript {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-lombok:${kotlinLombokVersion}")
+        classpath("io.freefair.gradle:lombok-plugin:${lombokPluginVersion}")
     }
 }
 
@@ -30,6 +37,8 @@ subprojects {
         plugin('kotlin-jpa')
         plugin('kotlin-kapt')
         plugin('jacoco')
+        plugin('org.jetbrains.kotlin.plugin.lombok')
+        plugin('io.freefair.lombok')
     }
 
     sourceCompatibility = '11'
@@ -71,6 +80,7 @@ subprojects {
         //lombok
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        kapt "com.google.dagger:dagger-compiler:2.33"
 
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
