feat: 운동 카테고리 조회하는 API 추가 (현재 2depth 까지인데 확장성 고려한 설계)

--- a/dgdg-api/src/main/resources/application-jwt.yml
+++ b/dgdg-api/src/main/resources/application-jwt.yml
@@ -9,7 +9,7 @@ apple:
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: local,local-pg
 ---
 jwt:
   issuer: ${jwt-issuer}
