--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -17,5 +17,9 @@ dependencies {
 
     // aws
     implementation 'com.amazonaws:aws-java-sdk-secretsmanager:1.12.79'
+
+    //s3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 }
 
