feat: 운동 카테고리에 대한 Redis Cache 적용

--- a/dgdg-domain/src/main/resources/application-db.yml
+++ b/dgdg-domain/src/main/resources/application-db.yml
@@ -42,7 +42,7 @@ spring:
       pool-name: local-pg-pool
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 ---
 spring:
   config:
