--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,12 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
+        implementation("org.springframework.boot:spring-boot-starter-data-redis")
+
+        // kotest
         testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
         testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
+
     }
 
     configurations {
