--- a/build.gradle
+++ b/build.gradle
@@ -82,11 +82,12 @@ subprojects {
         //lombok
         compileOnly'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
-        kapt "com.google.dagger:dagger-compiler:2.33"
 
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
+        testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
+        testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
     }
 
     configurations {
