feat: 로컬 및 테스트용 인메모리 레디스 설정 및 테스트 깨짐 수정

--- a/dgdg-domain/src/test/resources/application.yml
+++ b/dgdg-domain/src/test/resources/application.yml
@@ -6,3 +6,6 @@ spring:
         format_sql: true
         use_sql_comments: true
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
+  config:
+    activate:
+      on-profile: local
