--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         springCloudVersion = '2020.0.4'
         kotlinLombokVersion = '1.6.0-RC'
         lombokPluginVersion = '6.2.0'
+        embeddedRedisVersion = "0.7.2"
     }
     repositories {
 //        mavenCentral()
@@ -86,8 +87,14 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 
+        // Redis
+        implementation("org.springframework.boot:spring-boot-starter-data-redis")
+        implementation("it.ozimov:embedded-redis:${embeddedRedisVersion}")
+
+        // kotest
         testImplementation("io.kotest:kotest-runner-junit5:${kotestVersion}")
         testImplementation("io.kotest:kotest-extensions-spring:${kotestVersion}")
+
     }
 
     configurations {
