JPA 연관관계 수정 및 페이징 추가

--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
       force: true
 spring:
   profiles:
-    active: local
+    active: local,local-pg
     include:
       - db
       - jwt
