fix: afterEach -> afterTest 테스트 꺠짐 수정

--- a/dgdg-domain/src/test/resources/application.yml
+++ b/dgdg-domain/src/test/resources/application.yml
@@ -5,7 +5,5 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-        dialect: org.hibernate.dialect.PostgreSQL10Dialect
-  config:
-    activate:
-      on-profile: local
+  profiles:
+    active: local
