--- a/dgdg-domain/src/test/resources/application.yml
+++ b/dgdg-domain/src/test/resources/application.yml
@@ -6,6 +6,5 @@ spring:
         format_sql: true
         use_sql_comments: true
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
-  config:
-    activate:
-      on-profile: local
+  profiles:
+    active: local
