fix: api 모듈의 테스트 환경에 local-pg가 적용되는 경우 테스트 깨짐이 발생하는듯?

--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
       force: true
 spring:
   profiles:
-    active: local,local-pg
+    active: local
     include:
       - db
       - jwt
@@ -14,4 +14,3 @@ spring:
       - oauth
       - s3
       - cache
-
