--- a/dgdg-api/src/main/resources/application-jwt.yml
+++ b/dgdg-api/src/main/resources/application-jwt.yml
@@ -1,8 +1,8 @@
 jwt:
   issuer: dgdg-local
   secret: dgdg-local-test-key
-  access_token_expires_time: 86400 # 1일 (60 * 60 * 24)
-  refresh_token_expires_time: 2592000 # 30일 (60 * 60 & 24 * 30)
+  access_token_expires_time: 86400000 # 1일 (1000 * 60 * 60 * 24)
+  refresh_token_expires_time: 2592000000 # 30일 (1000 * 60 * 60 & 24 * 30)
 apple:
   issuer: ${apple-issuer}
   client-id: ${apple-client-id}
@@ -14,8 +14,8 @@ spring:
 jwt:
   issuer: ${jwt-issuer}
   secret: ${jwt-secret}
-  access_token_expires_time: 86400 # 1일 (60 * 60 * 24)
-  refresh_token_expires_time: 2592000 # 30일 (60 * 60 & 24 * 30)
+  access_token_expires_time: 86400000 # 1일 (1000 * 60 * 60 * 24)
+  refresh_token_expires_time: 2592000000 # 30일 (1000 * 60 * 60 & 24 * 30)
 apple:
   issuer: ${apple-issuer}
   client-id: ${apple-client-id}
