fix: 파일 업로드 크기 10MB -> 20MB 변경

--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
       - oauth
       - s3
       - cache
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
