feat: 프레임워크 필터에서 Forwarded Header를 넘겨주도록 설정

--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 
     //swagger
     implementation ("org.springdoc:springdoc-openapi-ui:${springdocVersion}")
+    implementation ("org.springdoc:springdoc-openai-kotlin:${springdocVersion}")
 
     // jwt
     implementation ("com.auth0:java-jwt:${jwtVersionVersion}")
