--- a/dgdg-api/src/main/resources/application.yml
+++ b/dgdg-api/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
     encoding:
       charset: UTF-8
       force: true
+  forward-headers-strategy: framework
 spring:
   profiles:
     active: local
