--- a/dgdg-api/build.gradle
+++ b/dgdg-api/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 
     //swagger
     implementation ("org.springdoc:springdoc-openapi-ui:${springdocVersion}")
-    implementation ("org.springdoc:springdoc-openai-kotlin:${springdocVersion}")
+    implementation ("org.springdoc:springdoc-openapi-kotlin:${springdocVersion}")
 
     // jwt
     implementation ("com.auth0:java-jwt:${jwtVersionVersion}")
