feat: 운영환경 DB 프로퍼티 설정 수정

--- a/dgdg-api/src/main/resources/application-aws.yml
+++ b/dgdg-api/src/main/resources/application-aws.yml
@@ -23,7 +23,7 @@ aws:
 spring:
   config:
     activate:
-      on-profile: real
+      on-profile: prod
 aws:
   encrypt:
-    secret-name: dgdg/real/secrets
+    secret-name: dgdg/prod/secrets
