feat: prod 프로파일 추가 및 로컬 환경 db용 docker-compose 추가

--- a/dgdg-api/src/main/resources/application-cache.yml
+++ b/dgdg-api/src/main/resources/application-cache.yml
@@ -6,7 +6,9 @@ spring:
     port: 6379
   config:
     activate:
-      on-profile: local,local-pg
+      on-profile:
+        - local
+        - local-pg
 ---
 spring:
   cache:
@@ -16,5 +18,7 @@ spring:
     port: 6379
   config:
     activate:
-      on-profile: dev
+      on-profile:
+        - dev
+        - prod
 
