feat: dev 환경 service, cluster 이름 수정

--- a/.github/workflows/dev-deployment.yaml
+++ b/.github/workflows/dev-deployment.yaml
@@ -60,6 +60,6 @@ jobs:
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: dev-dgdg-backend
-          cluster: dgdg-backend
+          service: dgdg-dev-api
+          cluster: dgdg-dev-backend
           wait-for-service-stability: true
